feat: Add payment integration

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_DB_URL=mongodb://localhost:27017/carWashDB
 JWT_SECRET=your_secret_key_here
+RAZOR_KEY_ID=rzp_test_Ryc9vQdbGuw6Vy
+RAZOR_KEY_SECRET=g9rqwap6kidmdRpNkOiBJwF5
