--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
     "next": "14.2.35",
+    "razorpay": "^2.9.6",
     "react": "^18",
     "react-dom": "^18"
   },
